Various refactorings
Use constructor injections for services and make parser return optionals

Signed-off-by: Anders Alfredsson <andersb86@gmail.com>